--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "cross-env NODE_ENV=development PORT=3000 nodemon src/app/server.ts",
         "build": "next build",
         "start": "next start",
         "lint": "stylelint --cache \"**/*.{css,scss}\" && next lint"
@@ -31,6 +31,7 @@
         "cnbuilder": "3.1.0",
         "compression": "1.7.4",
         "cookie-parser": "1.4.6",
+        "cross-env": "^7.0.3",
         "dotenv": "16.0.3",
         "express": "4.18.2",
         "http-proxy-middleware": "2.0.6",
@@ -70,6 +71,7 @@
         "stylelint-config-standard": "29.0.0",
         "stylelint-config-standard-scss": "6.1.0",
         "stylelint-scss": "4.3.0",
+        "ts-node": "^10.9.1",
         "typescript": "4.9.4"
     }
 }
