--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
     },
     "author": "Nikita Maslov (nikitamas1998@gmail.com)",
     "dependencies": {
-        "joi": "17.6.0",
         "@types/superagent": "4.1.16",
         "@vvo/tzdb": "6.90.0",
         "amqplib": "0.10.3",
@@ -23,8 +22,10 @@
         "cors": "2.8.5",
         "dotenv": "16.0.3",
         "express": "4.18.2",
+        "express-session": "^1.17.3",
         "express-validation": "4.1.0",
         "http-status-codes": "2.2.0",
+        "joi": "17.6.0",
         "jsonwebtoken": "9.0.0",
         "lodash": "4.17.21",
         "migrate-mongoose-typescript": "3.3.4",
@@ -44,6 +45,7 @@
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "2.8.13",
         "@types/express": "4.17.15",
+        "@types/express-session": "^1.17.5",
         "@types/jsonwebtoken": "9.0.1",
         "@types/lodash": "4.14.191",
         "@types/mongoose": "5.11.97",
