--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -13,3 +13,11 @@ services:
       - 27020:27017
     volumes:
       - /tmp/video-chat/db:/data/db
+
+  rabbit:
+    image: rabbitmq:3.7.18-management-alpine
+    restart: always
+    environment:
+      - RABBITMQ_DEFAULT_USER=editor
+      - RABBITMQ_DEFAULT_PASS=Qwerty12345!
+      - RABBIT_HOST=rabbit:5672
