--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,8 @@
         ]
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
+        "@emotion/react": "11.10.5",
+        "@emotion/styled": "11.10.5",
         "@hookform/resolvers": "2.9.10",
         "@material-ui/core": "4.12.4",
         "@mui/icons-material": "5.11.0",
@@ -31,7 +31,7 @@
         "cnbuilder": "3.1.0",
         "compression": "1.7.4",
         "cookie-parser": "1.4.6",
-        "cross-env": "^7.0.3",
+        "cross-env": "7.0.3",
         "dotenv": "16.0.3",
         "express": "4.18.2",
         "http-proxy-middleware": "2.0.6",
@@ -45,7 +45,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.42.1",
-        "react-redux": "^8.0.5"
+        "react-redux": "8.0.5",
+        "socket.io-client": "2.3.0"
     },
     "engines": {
         "node": ">=18.6"
@@ -57,6 +58,7 @@
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
+        "@types/socket.io-client": "1.4.36",
         "@typescript-eslint/eslint-plugin": "5.48.2",
         "@typescript-eslint/parser": "5.48.2",
         "eslint": "8.32.0",
@@ -71,7 +73,7 @@
         "stylelint-config-standard": "29.0.0",
         "stylelint-config-standard-scss": "6.1.0",
         "stylelint-scss": "4.3.0",
-        "ts-node": "^10.9.1",
+        "ts-node": "10.9.1",
         "typescript": "4.9.4"
     }
 }
