peer to peer connection and video streaming

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
         "next-transpile-modules": "10.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-draggable": "^4.4.5",
         "react-hook-form": "7.42.1",
         "react-redux": "8.0.5",
         "socket.io-client": "2.3.0"
