--- a/chat-sockets/tsconfig.json
+++ b/chat-sockets/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": [
-      "es2019"
-    ],
     "module": "CommonJs",
     "noImplicitAny": true,
     "noImplicitThis": true,
@@ -17,21 +14,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./types"
-    ],
-    "rootDirs": [
-      ".",
-      "../shared"
-    ]
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-  "include": [
-    "**/*.ts",
-    "**/*.js"
-  ]
+  "exclude": ["node_modules", "dist"],
+  "include": ["**/*.ts", "**/*.js"]
 }
