--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,37 +1,28 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": [
-      "es2019"
-    ],
-    "module": "CommonJs",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
     "moduleResolution": "node",
+    "target": "ES2022",
+    "module": "CommonJS",
+    "isolatedModules": false,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./types"
-    ],
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./build",
+    "baseUrl": "./",
     "rootDirs": [
       ".",
       "../shared"
-    ]
+    ],
+    "incremental": true,
+    "allowJs": false,
+    "strict": true
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
   "include": [
-    "**/*.ts",
-    "**/*.js"
+    "src/**/*",
+    "./index.ts"
   ]
 }
