--- a/chat-sockets/package.json
+++ b/chat-sockets/package.json
@@ -18,20 +18,20 @@
         "lodash": "4.17.15",
         "socket.io": "2.3.0",
         "superagent": "6.1.0",
-        "winston": "3.2.1",
-        "winston-transport": "4.4.0"
+        "winston": "3.8.2",
+        "shared": "file:../shared"
     },
     "devDependencies": {
         "@types/amqplib": "0.5.17",
         "@types/lodash": "4.14.158",
-        "@types/node": "14.14.22",
+        "@types/node": "18.11.18",
         "@types/socket.io": "2.1.10",
         "@types/superagent": "4.1.10",
-        "eslint": "6.8.0",
+        "eslint": "8.32.0",
         "eslint-config-airbnb-base": "14.1.0",
         "eslint-plugin-import": "2.20.1",
         "nodemon": "2.0.3",
-        "ts-node": "8.10.2",
-        "typescript": "3.9.7"
+        "ts-node": "10.9.1",
+        "typescript": "4.9.4"
     }
 }
