--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -25,7 +25,7 @@ services:
   redis:
     image: redis:alpine
     restart: always
-    command: redis-server --requirepass Qwerty12345!
-    command: ["redis-server", "--bind", "redis", "--port", "6379"]
+    command: redis-server --requirepass redis-password
+    # command: ["redis-server", "--bind", "redis", "--port", "16379"]
     ports:
-      - 6379:6379
+      - 16379:6379
