--- a/socket/package.json
+++ b/socket/package.json
@@ -19,7 +19,8 @@
         "socket.io": "2.3.0",
         "superagent": "6.1.0",
         "winston": "3.2.1",
-        "winston-transport": "4.4.0"
+        "winston-transport": "4.4.0",
+        "shared": "file:../shared"
     },
     "devDependencies": {
         "@types/amqplib": "0.5.17",
