--- a/socket/tsconfig.json
+++ b/socket/tsconfig.json
@@ -14,8 +14,21 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "rootDirs": [
+      ".",
+      "../shared"
+    ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
-  "exclude": ["node_modules", "dist"],
-  "include": ["**/*.ts", "**/*.js"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.js"
+  ]
 }
