--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,10 @@
         ]
     },
     "dependencies": {
-        "@hookform/resolvers": "2.9.10",
-        "@material-ui/core": "4.12.4",
         "@emotion/react": "11.10.5",
         "@emotion/styled": "11.10.5",
+        "@hookform/resolvers": "2.9.10",
+        "@material-ui/core": "4.12.4",
         "@mui/icons-material": "5.11.0",
         "@mui/material": "5.11.5",
         "@reduxjs/toolkit": "1.9.1",
@@ -32,7 +32,10 @@
         "compression": "1.7.4",
         "cookie-parser": "1.4.6",
         "cross-env": "7.0.3",
+        "date-fns": "2.29.3",
         "dotenv": "16.0.3",
+        "draft-js": "0.11.7",
+        "draft-js-plugins-editor": "3.0.0",
         "express": "4.18.2",
         "http-proxy-middleware": "2.0.6",
         "i18next-hmr": "1.11.1",
@@ -47,6 +50,8 @@
         "react-draggable": "^4.4.5",
         "react-hook-form": "7.42.1",
         "react-redux": "8.0.5",
+        "react-virtualized-auto-sizer": "1.0.11",
+        "react-window": "1.8.8",
         "socket.io-client": "2.3.0"
     },
     "engines": {
@@ -55,10 +60,13 @@
     "devDependencies": {
         "@types/compression": "1.7.2",
         "@types/cookie-parser": "1.4.3",
+        "@types/draft-js": "^0.11.10",
         "@types/express": "4.17.15",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
+        "@types/react-virtualized-auto-sizer": "1.0.1",
+        "@types/react-window": "1.8.5",
         "@types/socket.io-client": "1.4.36",
         "@typescript-eslint/eslint-plugin": "5.48.2",
         "@typescript-eslint/parser": "5.48.2",
