--- a/shared/package.json
+++ b/shared/package.json
@@ -12,10 +12,12 @@
     "author": "Nikita Maslov (nikitamas1998@gmail.com)",
     "license": "ISC",
     "dependencies": {
+        "amqplib": "0.10.3",
         "ioredis": "5.3.1",
         "winston": "3.8.2"
     },
     "devDependencies": {
+        "@types/amqplib": "0.10.1",
         "@types/ioredis": "5.0.0",
         "@typescript-eslint/eslint-plugin": "5.57.0",
         "@typescript-eslint/parser": "5.57.0",
